Remove legacy inspections and add auto registry